trunk/Archive2/5e/a1e9ccba639066/output
main.cpp: In function 'int main()':
main.cpp:31:20: error: the value of 'b' is not usable in a constant expression
 constexpr auto d = b;
                    ^
main.cpp:30:12: note: 'b' was not initialized with a constant expression
 const auto b = a;
            ^
main.cpp:31:16: warning: unused variable 'd' [-Wunused-variable]
 constexpr auto d = b;
                ^
